--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nina's Portfolio</title>
+    <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
