--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>Nina Shin</h1>
 
     <nav class='topnav'>
-        <a href="#">About</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Contact</a>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
 </header>
