added psychic game to portfolio

--- a/index.html
+++ b/index.html
@@ -23,27 +23,29 @@
           <h2>About Me</h2>
           <img id='profile-pic' src="assets/images/profile-pic.png" alt="profile image">
           <div class ='content'>
-          <p>Hello, There! </br> 
-          </br> My Name is Nina Shin and I am currently learning to
-            code! I originate from the beautiful city of Los Angeles, CA. My background 
-            is in Business Marketing, my previous expertise in apparel, and my current
-            obsession in Product.
-          </p>
-          <p>In my free time, you can find me -
-              <ul class='fun'>
-                  <li class='fun'>Eating at a nice restaurant</li>
-                  <li class='fun'>Hiking with my dog</li>
-                  <li class='fun'>Traveling - I love new experiences</li>
-                  <li class='fun'>Relaxing with my boyfriend</li>
-                  <li class='fun'>Admiring pieces of art</li>
-              </ul>
-          </p>
-          <p>
-            Thanks for visiting and I hope you enjoy my work! Feel free to give me a shout with
-            any questions or comments!
-          </br></br>
-          - Nina Shin
-          </p>
+              <p>Hello, There! </p> 
+              <p> My Name is Nina Shin and I am currently learning to
+                code! I originate from the beautiful city of Los Angeles, CA. My background 
+                is in Business Marketing, my previous expertise in apparel, and my current
+                obsession in Product.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur porro, neque id 
+                placeat, aliquam odit consequatur necessitatibus reprehenderit eaque dolorum aut 
+                libero omnis quisquam nulla provident? Sunt, dolorem ducimus tempore dolor atque eum 
+                et aliquid hic quas laudantium ab, ut quaerat, minus cum pariatur eveniet accusantium! 
+                Tenetur tempora aperiam, alias quia dolor iste sint illum culpa, esse sit optio 
+                recusandae quos assumenda rem aliquid sapiente voluptas aut molestias quidem eaque 
+                voluptatem minus voluptatum expedita neque! Minima voluptates autem iure saepe deleniti 
+                nemo aliquam, ratione incidunt est odit perspiciatis quaerat sint suscipit ex voluptas 
+                et porro, veritatis maiores in sequi omnis.              
+              </p>
+              <p>
+                Thanks for visiting and I hope you enjoy my work! Feel free to give me a shout with
+                any questions or comments!
+              </br></br>
+              - Nina Shin
+              </p>
         </div>
       </article>
 
