--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
       <article class='portfolio'>
           <h2>Portfolio</h2>
         
-            <a href='#'>
-                    <img class='portfolio-pics' src="assets/images/hangman-placeholder.jpeg" alt="Hangman">
-                    <div class='image-text'>Hangman</div>
+            <a href='https://ninashin66.github.io/Psychic-Game/'>
+                    <img class='portfolio-pics' src="assets/images/crystal-ball-4043805__340 copy.jpg" alt="Psychic">
+                    <div class='image-text'>Psychic Game</div>
 
             </a>
 
