--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,9 @@
 
             </a>
 
-            <a href='#'>
-                    <img class='portfolio-pics' src='assets/images/rpg-placeholder.jpg' alt='RPG Game'>
-                    <div class='image-text'>RPG Game</div> 
+            <a href='https://ninashin66.github.io/unit-4-game/'>
+                    <img class='portfolio-pics' src='assets/images/pexels-photo-578860 (1).jpeg' alt='Unit 4 Game'>
+                    <div class='image-text'>Unit 4 Game</div> 
             </a>
             
 
