--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
             </a>
             
 
-            <a href ='#'>
-                    <img class='portfolio-pics' src='assets/images/triviagame-placeholder.jpg' alt='Trivia Game'>
+            <a href ='https://ninashin66.github.io/TriviaGame/'>
+                    <img class='portfolio-pics' src='assets/images/wp1850832-harry-potter-book-wallpapers copy.jpg' alt='Trivia Game'>
                     <div class='image-text'>Trivia Game</div>
             </a>
 
