added train scheduler

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,13 +66,13 @@
           <div class="image-text">Rutgers Info Widget</div>
         </a>
 
-        <a href="#">
+        <a href="https://ninashin66.github.io/Train-Scheduler/">
           <img
             class="portfolio-pics"
-            src="assets/images/rockps-placeholder.jpg"
+            src="assets/images/train-3448-72edc8c66df509608c1e13f712a1436e@1x.jpg"
             alt="Rock Paper Scissors"
           />
-          <div class="image-text">Rock Papers Scissors</div>
+          <div class="image-text">Train Scheduler</div>
         </a>
       </article>
     </section>
